Add image to index.html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Mahdi Niazi</h1>
   <h2>Talented Frontend developer</h2>
-  
+  <img src="./assets/avatars/fake_person.jpg" alt="Mahdi's Resume">
 </body>
 </html>
