Add about me section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
   <h1>Mahdi Niazi</h1>
   <h2>Talented Frontend developer</h2>
   <img src="./assets/avatars/fake_person.jpg" alt="Mahdi's Resume">
+  <h2>About Me</h2>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Magni voluptatem quam corrupti iusto qui nihil consequatur 
+    voluptate voluptatibus quisquam, tempora sunt dolorem deleniti 
+    accusantium quas molestiae eum quaerat hic laudantium, harum veniam 
+    itaque est nulla ipsum. Magnam maxime quibusdam officiis rem 
+    laborum repellat veritatis quia aspernatur cum.
+     Quae, totam officiis.</p>
+     
 </body>
 </html>
