Add My skills section

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     voluptate voluptatibus quisquam, tempora sunt dolorem deleniti 
     accusantium quas molestiae eum quaerat hic laudantium, harum veniam 
     itaque est nulla ipsum. Magnam maxime quibusdam officiis rem 
-    laborum repellat veritatis quia aspernatur cum.
-     Quae, totam officiis.</p>
-     
+    laborum repellat veritatis quia aspernatur cum.Quae, totam officiis.</p>
+
+  <h2>My Skills</h2>
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Laravel</li>
+    <li>PHP</li>
+  </ol>
 </body>
 </html>
