Add My hobbies section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
     <li>Laravel</li>
     <li>PHP</li>
   </ol>
+  <h2>My Hobbies</h2>
+  <ul>
+    <li>Gym</li>
+    <li>Football</li>
+    <li>Coding</li>
+    <li>Swimming</li>
+  </ul>
 </body>
 </html>
