--- a/index.html
+++ b/index.html
@@ -1,37 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mahdi's Resume</title>
-</head>
-<body>
-  <h1>Mahdi Niazi</h1>
-  <h2>Talented Frontend developer</h2>
-  <img src="./assets/avatars/fake_person.jpg" alt="Mahdi's Resume">
-  <h2>About Me</h2>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-    Magni voluptatem quam corrupti iusto qui nihil consequatur 
-    voluptate voluptatibus quisquam, tempora sunt dolorem deleniti 
-    accusantium quas molestiae eum quaerat hic laudantium, harum veniam 
-    itaque est nulla ipsum. Magnam maxime quibusdam officiis rem 
-    laborum repellat veritatis quia aspernatur cum.Quae, totam officiis.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mahdi's Resume</title>
+  </head>
+  <body>
+    <h1>Mahdi Niazi</h1>
+    <h2>Talented Frontend developer</h2>
+    <img src="./assets/avatars/fake_person.jpg" alt="Mahdi's Resume" />
+    <h2>About Me</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni voluptatem
+      quam corrupti iusto qui nihil consequatur voluptate voluptatibus quisquam,
+      tempora sunt dolorem deleniti accusantium quas molestiae eum quaerat hic
+      laudantium, harum veniam itaque est nulla ipsum. Magnam maxime quibusdam
+      officiis rem laborum repellat veritatis quia aspernatur cum.Quae, totam
+      officiis.
+    </p>
 
-  <h2>My Skills</h2>
-  <ol>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>React</li>
-    <li>Laravel</li>
-    <li>PHP</li>
-  </ol>
-  <h2>My Hobbies</h2>
-  <ul>
-    <li>Gym</li>
-    <li>Football</li>
-    <li>Coding</li>
-    <li>Swimming</li>
-  </ul>
-</body>
+    <h2>My Skills</h2>
+    <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>React</li>
+      <li>Laravel</li>
+      <li>PHP</li>
+    </ol>
+    <h2>My Hobbies</h2>
+    <ul>
+      <li>Gym</li>
+      <li>Football</li>
+      <li>Coding</li>
+      <li>Swimming</li>
+    </ul>
+    <h2>Contact Me</h2>
+    <table>
+      <tr>
+        <th>Discord</th>
+        <td>mahdi_85593</td>
+      </tr>
+      <tr>
+        <th>LinkedIn</th>
+
+        <td>
+          <a
+            href="https://www.linkedin.com/in/mohammad-mahdi-niazi/"
+            target="_blank"
+            >Mohammad Mahdi Niazi</a
+          >
+        </td>
+      </tr>
+      <tr>
+        <th>Email</th>
+        <td><a href="mailto:mahdi@mahdtech.net">mahdi@mahdtech.net</a></td>
+      </tr>
+      <tr>
+        <th>Github</th>
+        <td>
+          <a
+            href="https://github.com/Mahdi-Niazi/Basic-Portfolio"
+            target="_blank"
+            >Mahdi-Niazi</a
+          >
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
