--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script src="./js/scripts.js"></script>
+
     <title>Mahdi's Resume</title>
   </head>
-  <body>
-    <h1>Mahdi Niazi</h1>
-    <h2>Talented Frontend developer</h2>
-    <img src="./assets/avatars/fake_person.jpg" alt="Mahdi's Resume" />
-    <h2>About Me</h2>
-    <p>
+  <body class="fancy-body">
+    <h1 id="candidate-name">Mahdi Niazi</h1>
+    <h2 id="candidate-desired-role">Talented Frontend developer</h2>
+    <img
+      src="./assets/avatars/fake_person.jpg"
+      alt="Mahdi's Resume"
+      id="candidate-image"
+    />
+    <h2 id="about-me">About Me</h2>
+    <p class="candidate-bio">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni voluptatem
       quam corrupti iusto qui nihil consequatur voluptate voluptatibus quisquam,
       tempora sunt dolorem deleniti accusantium quas molestiae eum quaerat hic
@@ -21,8 +25,8 @@
       officiis.
     </p>
 
-    <h2>My Skills</h2>
-    <ol>
+    <h2 id="skills">My Skills</h2>
+    <ol id="skills-list">
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
@@ -30,15 +34,15 @@
       <li>Laravel</li>
       <li>PHP</li>
     </ol>
-    <h2>My Hobbies</h2>
-    <ul>
+    <h2 id="hobbies">My Hobbies</h2>
+    <ul id="hobbies-list">
       <li>Gym</li>
       <li>Football</li>
       <li>Coding</li>
       <li>Swimming</li>
     </ul>
-    <h2>Contact Me</h2>
-    <table>
+    <h2 id="contacts">Contact Me</h2>
+    <table class="contacts-table">
       <tr>
         <th>Discord</th>
         <td>mahdi_85593</td>
@@ -69,5 +73,7 @@
         </td>
       </tr>
     </table>
+
+    <script src="./js/scripts.js"></script>
   </body>
 </html>
